# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = otoc
version = 0.1.0
description = Optimal Transport with Order Constraints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IBM/otoc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    otoc = otoc
# manually import for now
packages = 
    otoc
    otoc.iterative
    otoc.iterative.projection
    otoc.tree_search
python_requires = >=3.6
install_requires =
    numpy>=1.19; python_version < "3.7"
    numpy>=1.21; python_version >= "3.7"
